# itsm-agent-example

./: .gitignore  README.md  docker-compose.yml  e2e_batch.ps1
.github/workflows/: ci.yml
agent/: Dockerfile  pyproject.toml
agent/src/itsm_agent/: __init__.py  __main__.py
agent/src/itsm_agent/application/: __init__.py  dto.py  formatting.py  pipeline.py  prompts.py  use_cases.py
agent/src/itsm_agent/composition/: __init__.py  builder.py  config.py
agent/src/itsm_agent/domain/: __init__.py  models.py  ports.py  services.py  value_objects.py
agent/src/itsm_agent/infrastructure/: __init__.py
agent/src/itsm_agent/infrastructure/llm/: __init__.py  ollama_service.py
agent/src/itsm_agent/infrastructure/mcp/: __init__.py  ticket_repository.py
agent/src/itsm_agent/infrastructure/rag/: __init__.py  chroma_repository.py  e5_embedder.py  markdown_chunker.py
agent/src/itsm_agent/infrastructure/reports/: __init__.py  filesystem_repository.py  markdown_renderer.py
agent/src/itsm_agent/interfaces/: __init__.py  cli.py  jobs.py  rest.py
agent/tests/: conftest.py  test_builder.py  test_markdown_chunker.py  test_markdown_renderer.py  test_pipeline_with_fakes.py  test_rest_api.py  test_use_cases.py
docs/: architecture.md  assumptions.md  tech-decisions.md
itsm_mock/: main.py
itsm_mock/data/: comments.json  history.json  tickets.json
kb/: kb_01_sso_tls_failure.md  kb_02_db_lock_contention.md  kb_03_oom_killed_pods.md  kb_04_disk_pressure.md  kb_05_dns_resolution_failures.md  kb_06_certificate_expiry.md  kb_07_memory_leak.md  kb_08_backup_verification_failure.md  kb_09_connection_pool_exhaustion.md  kb_10_deployment_rollout_failures.md
mcp_server/: Dockerfile  requirements.txt  server.py
reports/: README.md
