[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "itsm-agent"
version = "0"
description = "Local ITSM RCA agent (DDD / n-tier, REST + CLI) — MCP-fed tickets, Chroma RAG, Ollama LLM."
requires-python = ">=3.12"
authors = [{ name = "Burak Bilgic", email = "iletisim@mburakbilgic.com" }]
dependencies = [
    "langchain-core==0.3.29",
    "langchain-ollama==0.2.2",
    "langgraph==0.2.62",
    "mcp>=1.10,<2.0",
    "chromadb==0.5.23",
    "sentence-transformers==3.3.1",
    "httpx==0.27.2",
    "pydantic==2.10.4",
    "fastapi==0.115.6",
    "uvicorn[standard]==0.34.0",
]

[project.optional-dependencies]
dev = [
    "ruff==0.8.4",
    "pytest==8.3.4",
    "pytest-asyncio==0.25.0",
]

[project.scripts]
itsm-agent = "itsm_agent.interfaces.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

# ----- ruff ------------------------------------------------------------------

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "UP",   # pyupgrade
    "SIM",  # flake8-simplify
    "RUF",  # ruff-specific
]
ignore = [
    "E501",  # long lines — line-length already enforces, allow long strings/comments
    "B008",  # FastAPI uses Depends() in default args by design
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101"]   # asserts allowed in tests
"__init__.py" = ["F401"] # re-exports

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# ----- pytest ----------------------------------------------------------------

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
addopts = "-ra --strict-markers"
filterwarnings = [
    "ignore::DeprecationWarning:chromadb.*",
    "ignore::DeprecationWarning:pydantic.*",
]
